fix : align some text & adjust total time size

--- a/src/assets/style/screen.css
+++ b/src/assets/style/screen.css
@@ -29,6 +29,8 @@
     color: var(--white);
     font-size: 47.5pt;
     font-family: 'Brodaers Expanded';
+    width: 50%;
+    text-align: end;
 }
 .pauseTime{
     top: 0;
@@ -51,27 +53,32 @@
     align-items: center;
     font-family: 'Brodaers Expanded';
 }
+.totalTimeGroup > .separator{
+    font-size: 30pt !important;
+}
 .totalTimeGroup > p{
     font-size: 23pt;
 }
 .totalTimeGroup > .totalTimeScreen > p{
     font-size: 23pt;
 }
-.totalTimeGroup > .totalTimeScreen.two-lines {
+.totalTimeGroup.two-lines > p{
+    font-size: 20pt;
+}
+.totalTimeGroup.two-lines > .totalTimeScreen {
     display: flex;
     flex-direction: column;
     align-items: end;
 }
-.totalTimeGroup > .totalTimeScreen.two-lines > p{
-    font-size: 15pt;
-    margin-top: 10px;
+.totalTimeGroup.two-lines > .totalTimeScreen > p{
+    font-size: 19pt;
 }
-.totalTimeGroup > .totalTimeScreen.two-lines > span{
+.totalTimeGroup.two-lines > .totalTimeScreen > span{
     display: flex;
     gap: 5px;
 }
-.totalTimeGroup > .totalTimeScreen.two-lines > span> p{
-    font-size: 10pt;
+.totalTimeGroup.two-lines > .totalTimeScreen > span> p{
+    font-size: 13pt;
 }
 .countdown{
     width: 250px;
